added code for perceptron algorithm.

--- a/intro-nn/and-or-not.ipynb
+++ b/intro-nn/and-or-not.ipynb
@@ -16,11 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      "Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "      0          0                  -2.0                    0          Yes\n",
+      "      0          1                  -1.0                    0          Yes\n",
+      "      1          0                  -1.0                    0          Yes\n",
+      "      1          1                   0.0                    1          Yes\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
