some example added in tutorial

--- a/python-tutorial/python-tutorial.ipynb
+++ b/python-tutorial/python-tutorial.ipynb
@@ -14,11 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "9\n",
+      "81\n",
+      "4\n",
+      "8\n",
+      "<class 'float'>\n",
+      "2.5 3.5 5.0 6.25\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "print(type(x)) # Prints \"<class 'int'>\"\n",
@@ -26,7 +41,7 @@
     "print(x + 1)   # Addition; prints \"4\"\n",
     "print(x - 2)   # Subtraction; prints \"1\"\n",
     "print(x * 3)   # Multiplication; prints \"9\"\n",
-    "print(x ** 4)  # Exponentiation; prints \"16\"\n",
+    "print(x ** 4)  # Exponentiation; prints \"81\"\n",
     "x += 1\n",
     "print(x)  # Prints \"4\"\n",
     "x *= 2\n",
@@ -49,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "t = True\n",
     "f = False\n",
@@ -73,11 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "HELLO\n",
+      "  hello\n",
+      " hello \n",
+      "he(ell)(ell)o\n",
+      "world\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"hello\"\n",
     "print(s.capitalize())  # Capitalize a string; prints \"Hello\"\n",
@@ -109,11 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2] 2\n",
+      "2\n",
+      "[3, 1, 'foo']\n",
+      "[3, 1, 'foo', 'bar']\n",
+      "bar [3, 1, 'foo']\n"
+     ]
+    }
+   ],
    "source": [
     "xs = [3, 1, 2]    # Create a list\n",
     "print(xs, xs[2])  # Prints \"[3, 1, 2] 2\"\n",
@@ -124,6 +170,24 @@
     "print(xs)         # Prints \"[3, 1, 'foo', 'bar']\"\n",
     "x = xs.pop()      # Remove and return the last element of the list\n",
     "print(x, xs)      # Prints \"bar [3, 1, 'foo']\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [1, 2, 'hey']\n",
+    "print(lis[0])"
    ]
   },
   {
@@ -142,16 +206,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[2, 3]\n",
+      "[1, 2, 3, 4]\n",
+      "[0, 1]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3]\n",
+      "[0, 1, 8, 9, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = list(range(5))     # range is a built-in function that creates a list of integers\n",
     "print(nums)               # Prints \"[0, 1, 2, 3, 4]\"\n",
     "print(nums[2:4])          # Get a slice from index 2 to 4 (exclusive); prints \"[2, 3]\"\n",
-    "print(nums[2:])           # Get a slice from index 2 to the end; prints \"[2, 3, 4]\"\n",
+    "print(nums[1:])           # Get a slice from index 2 to the end; prints \"[2, 3, 4]\"\n",
     "print(nums[:2])           # Get a slice from the start to index 2 (exclusive); prints \"[0, 1]\"\n",
     "print(nums[:])            # Get a slice of the whole list; prints \"[0, 1, 2, 3, 4]\"\n",
     "print(nums[:-1])          # Slice indices can be negative; prints \"[0, 1, 2, 3]\"\n",
@@ -170,16 +246,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "dog\n",
+      "monkey\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat', 'dog', 'monkey']\n",
     "for animal in animals:\n",
     "    print(animal)\n",
     "# Prints \"cat\", \"dog\", \"monkey\", each on its own line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2,3,4,5]\n",
+    "for a in nums:\n",
+    "    print(a*2)"
    ]
   },
   {
@@ -191,11 +298,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1: cat\n",
+      "#2: dog\n",
+      "#3: monkey\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat', 'dog', 'monkey']\n",
     "for idx, animal in enumerate(animals):\n",
@@ -212,11 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "squares = []\n",
@@ -234,11 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "squares = [x ** 2 for x in nums]\n",
@@ -254,11 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "even_squares = [x ** 2 for x in nums if x % 2 == 0]\n",
@@ -275,14 +408,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cute\n",
+      "furry\n",
+      "True\n",
+      "wet\n",
+      "N/A\n",
+      "wet\n",
+      "N/A\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'cat': 'cute', 'dog': 'furry'}  # Create a new dictionary with some data\n",
     "print(d['cat'])       # Get an entry from a dictionary; prints \"cute\"\n",
+    "print(d['dog'])\n",
     "print('cat' in d)     # Check if a dictionary has a given key; prints \"True\"\n",
     "d['fish'] = 'wet'     # Set an entry in a dictionary\n",
     "print(d['fish'])      # Prints \"wet\"\n",
@@ -304,11 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'person': 2, 'cat': 4, 'spider': 8}\n",
     "for animal in d:\n",
@@ -326,11 +480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'person': 2, 'cat': 4, 'spider': 8}\n",
     "for animal, legs in d.items():\n",
@@ -347,11 +509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16}\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "even_num_to_square = {x: x ** 2 for x in nums if x % 2 == 0}\n",
@@ -474,11 +642,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative\n",
+      "zero\n",
+      "positive\n"
+     ]
+    }
+   ],
    "source": [
     "def sign(x):\n",
     "    if x > 0:\n",
@@ -494,6 +670,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def power(n, m):\n",
+    "    return n**m\n",
+    "\n",
+    "print(power(2,3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -502,11 +698,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Bob\n",
+      "HELLO, FRED!\n"
+     ]
+    }
+   ],
    "source": [
     "def hello(name, loud=False):\n",
     "    if loud:\n",
@@ -581,11 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(3,)\n",
+      "1 2 3\n",
+      "[5 2 3]\n",
+      "(2, 3)\n",
+      "1 2 4\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -610,11 +824,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.]\n",
+      " [ 0.  0.]]\n",
+      "[[ 1.  1.]]\n",
+      "[[8 8]\n",
+      " [8 8]]\n",
+      "[[ 1.  0.]\n",
+      " [ 0.  1.]]\n",
+      "[[ 0.97464262  0.91320547]\n",
+      " [ 0.17630511  0.11855497]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
