--- a/projects/project-1/project1.ipynb
+++ b/projects/project-1/project1.ipynb
@@ -17,9 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data\\train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data\\train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "# Import MNIST data\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -28,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,62 +74,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set the hyperparameters\n",
-    "learning_rate = \n",
-    "batch_size = \n",
-    "epochs = \n",
+    "learning_rate = 0.001\n",
+    "batch_size = 128\n",
+    "epochs = 10\n",
     "model_path = \"/checkpoints/model.ckpt\"\n",
     "\n",
     "# network parameters\n",
     "# number of nodes in first hidden layer\n",
-    "n_hidden_1 = \n",
+    "n_hidden_1 = 256\n",
     "# number of nodes in second hidden layer\n",
-    "n_hidden_2 = \n",
+    "n_hidden_2 = 256\n",
     "\n",
-    "n_input =  # MNIST data input (img shape: 28x28)\n",
-    "n_classes =  # MNIST total classes (0-9 digits)"
+    "n_input = 784 # MNIST data input (img shape: 28x28)\n",
+    "n_classes = 10 # MNIST total classes (0-9 digits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tf Graph input\n",
-    "x = \n",
-    "y = \n",
+    "x = tf.placeholder(\"float\", [None, n_input])\n",
+    "y = tf.placeholder(\"float\", [None, n_classes])\n",
     "\n",
     "# layer weights and bias\n",
-    "weights = {}\n",
+    "weights = {\n",
+    "    'in_h1': tf.Variable(tf.random_normal([n_input, n_hidden_1])),\n",
+    "    'h1_h2': tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2])),\n",
+    "    'h2_out': tf.Variable(tf.random_normal([n_hidden_2, n_classes]))\n",
+    "}\n",
     "\n",
-    "biases = {}"
+    "biases = {\n",
+    "    'b1': tf.Variable(tf.random_normal([n_hidden_1])),\n",
+    "    'b2': tf.Variable(tf.random_normal([n_hidden_2])),\n",
+    "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function to create the model\n",
     "def neural_network(x, weights, biases):\n",
     "    # first hidden layer with RELU activation\n",
-    "\n",
+    "    layer_1 = tf.add(tf.matmul(x, weights['in_h1']), biases['b1'])\n",
+    "    layer_1 = tf.nn.relu(layer_1)\n",
+    "    \n",
     "    # second hidden layer with RELU activation\n",
+    "    layer_2 = tf.add(tf.matmul(layer_1, weights['h1_h2']), biases['b2'])\n",
+    "    layer_2 = tf.nn.relu(layer_2)\n",
     "\n",
     "    # output layer with linear activation to get logits\n",
+    "    output = tf.matmul(layer_2, weights['h2_out'] + biases['out'])\n",
     "    \n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,16 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-17-acaaae05d34e>:5: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# construct model\n",
     "predictions = neural_network(x, weights, biases)\n",
     "\n",
     "# define loss and the optimizer\n",
-    "cost = \n",
-    "optimizer = \n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=predictions, labels=y))\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)\n",
     "\n",
     "# Initializing the variables\n",
     "init = tf.global_variables_initializer()\n",
@@ -149,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0   - Cost: 19.9   Valid Accuracy: 0.243\n",
+      "Epoch: 1   - Cost: 7.02   Valid Accuracy: 0.235\n",
+      "Epoch: 2   - Cost: 6.45   Valid Accuracy: 0.222\n",
+      "Epoch: 3   - Cost: 4.65   Valid Accuracy: 0.214\n",
+      "Epoch: 4   - Cost: 3.51   Valid Accuracy: 0.205\n",
+      "Epoch: 5   - Cost: 3.34   Valid Accuracy: 0.202\n",
+      "Epoch: 6   - Cost: 3.07   Valid Accuracy: 0.2  \n",
+      "Epoch: 7   - Cost: 3.22   Valid Accuracy: 0.195\n",
+      "Epoch: 8   - Cost: 2.43   Valid Accuracy: 0.195\n",
+      "Epoch: 9   - Cost: 3.12   Valid Accuracy: 0.194\n",
+      "\n",
+      "Model saved in: /checkpoints/model.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    # Initialize all the variables\n",
@@ -186,9 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /checkpoints/model.ckpt\n",
+      "Model restored from: /checkpoints/model.ckpt\n",
+      "\n",
+      "Test Accuracy: 0.1907999962568283\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    # Initialize the variables\n",
@@ -204,6 +281,13 @@
     "    \n",
     "    print('\\nTest Accuracy: {}'.format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
