--- a/projects/project-1/project1.ipynb
+++ b/projects/project-1/project1.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These two lines of code which will download and read in the data automatically."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -46,6 +53,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here `mnist` is a lightweight class which stores the training, validation, and testing sets as NumPy arrays. It also provides a function for iterating through data minibatches, which we will use below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -64,12 +78,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step is importing TensorFlow and defining our session. TensorFlow, in a sense, creates a directed acyclic graph (flow chart) which you later feed with data and run in a session"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we set our hyperparameters. This is basically an iterative process and we experiment with different parameter values. We select the values depending on the final performance of our model."
    ]
   },
   {
@@ -95,15 +123,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start building the computation graph by creating nodes for the input images and target output classes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tf Graph input\n",
     "x = tf.placeholder(\"float\", [None, n_input])\n",
-    "y = tf.placeholder(\"float\", [None, n_classes])\n",
+    "y = tf.placeholder(\"float\", [None, n_classes])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here `x` and `y` aren't specific values. Rather, they are each a `placeholder` -- a value that we'll input when we ask TensorFlow to run a computation.\n",
     "\n",
+    "The input images `x` will consist of a 2d tensor of floating point numbers. Here we assign it a shape of `[None, 784]`, where `784` is the dimensionality of a single flattened 28 by 28 pixel MNIST image, and `None` indicates that the first dimension, corresponding to the batch size, can be of any size. The target output classes `y` will also consist of a 2d tensor, where each row is a one-hot 10-dimensional vector indicating which digit class (zero through nine) the corresponding MNIST image belongs to.\n",
+    "\n",
+    "The `shape` argument to `placeholder` is optional, but it allows TensorFlow to automatically catch bugs stemming from inconsistent tensor shapes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we will define the `weights` and `biases`. These two values are the grunt workers of the classifier—they will be the only values we will need to calculate our prediction after the classifier is trained.\n",
+    "We will set their initial values from a `random_normal` probability distribution and TensorFlow will optimize these values later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# layer weights and bias\n",
     "weights = {\n",
     "    'in_h1': tf.Variable(tf.random_normal([n_input, n_hidden_1])),\n",
@@ -119,8 +180,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next cell, we define a function to create our neural network model. It takes in as parameters, the input images `x`, the `weights` and the `biases`.\n",
+    "\n",
+    "Here the function will cretae a network with two hidden layers.\n",
+    "It will return the logits that we'll later feed into the optimizer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,14 +206,23 @@
     "    layer_2 = tf.nn.relu(layer_2)\n",
     "\n",
     "    # output layer with linear activation to get logits\n",
-    "    output = tf.matmul(layer_2, weights['h2_out'] + biases['out'])\n",
+    "    output = tf.matmul(layer_2, weights['h2_out']) + biases['out']\n",
     "    \n",
     "    return output"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`print_stats` is a helper function to print some network stats during training.\n",
+    "\n",
+    "It will print out the `cost (error)` and `accuracy` of the network after each epoch."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +240,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next up, we define our `cost` function and the `optimizer` we want to use."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-17-acaaae05d34e>:5: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-10-acaaae05d34e>:5: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "\n",
       "Future major versions of TensorFlow will allow gradients to flow\n",
@@ -196,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,23 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0   - Cost: 19.9   Valid Accuracy: 0.243\n",
-      "Epoch: 1   - Cost: 7.02   Valid Accuracy: 0.235\n",
-      "Epoch: 2   - Cost: 6.45   Valid Accuracy: 0.222\n",
-      "Epoch: 3   - Cost: 4.65   Valid Accuracy: 0.214\n",
-      "Epoch: 4   - Cost: 3.51   Valid Accuracy: 0.205\n",
-      "Epoch: 5   - Cost: 3.34   Valid Accuracy: 0.202\n",
-      "Epoch: 6   - Cost: 3.07   Valid Accuracy: 0.2  \n",
-      "Epoch: 7   - Cost: 3.22   Valid Accuracy: 0.195\n",
-      "Epoch: 8   - Cost: 2.43   Valid Accuracy: 0.195\n",
-      "Epoch: 9   - Cost: 3.12   Valid Accuracy: 0.194\n",
+      "Epoch: 0   - Cost: 45.2   Valid Accuracy: 0.806\n",
+      "Epoch: 1   - Cost: 55.5   Valid Accuracy: 0.854\n",
+      "Epoch: 2   - Cost: 32.9   Valid Accuracy: 0.869\n",
+      "Epoch: 3   - Cost: 27.9   Valid Accuracy: 0.877\n",
+      "Epoch: 4   - Cost: 41.5   Valid Accuracy: 0.886\n",
+      "Epoch: 5   - Cost: 36.3   Valid Accuracy: 0.89 \n",
+      "Epoch: 6   - Cost: 19.7   Valid Accuracy: 0.887\n",
+      "Epoch: 7   - Cost: 20.2   Valid Accuracy: 0.892\n",
+      "Epoch: 8   - Cost: 15.0   Valid Accuracy: 0.898\n",
+      "Epoch: 9   - Cost: 25.8   Valid Accuracy: 0.901\n",
       "\n",
       "Model saved in: /checkpoints/model.ckpt\n"
      ]
@@ -252,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +349,7 @@
       "INFO:tensorflow:Restoring parameters from /checkpoints/model.ckpt\n",
       "Model restored from: /checkpoints/model.ckpt\n",
       "\n",
-      "Test Accuracy: 0.1907999962568283\n"
+      "Test Accuracy: 0.8952999711036682\n"
      ]
     }
    ],
